--- a/src/component/flight_list/FlightList.css
+++ b/src/component/flight_list/FlightList.css
@@ -18,10 +18,8 @@
 .select {
     display: flex;
     justify-content: flex-end;
-}
-.select  {
-    background-color:#162797 ;
-    color: white;
+   
+    color: #162797;
     height: 25px;
 }
 
