--- a/src/component/banner/Banner.css
+++ b/src/component/banner/Banner.css
@@ -4,3 +4,9 @@
     padding-top: 25px;
     padding-left: 25px;
 }
+@media screen and (max-width: 600px) {
+    .img {
+      display: none;
+    }
+
+  }
